Full original gameplay and sound effects. Still needs graphis

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,21 @@
 <html>
     <head>
         <title>Save the Moon</title>
+        <style>
+            body {
+                background: black;                
+            }
+            .wrap {
+                width: 500px;
+                margin: 0 auto;
+                outline: 2px solid lightgray;
+            }            
+        </style>
     </head>
     <body>
-        <canvas id=canvas style="width: 500px; height: 500px"></canvas>
+        <div class=wrap>
+            <canvas id=canvas style="width: 500px; height: 500px"></canvas>
+        </div>
         <script src="../dist/bundle.js"></script>
     </body>
 </html>
