--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,14 @@
         <title>Save the Moon</title>
         <style>
             body {
-                background: black;                
+                background: black;           
             }
-            .wrap {
+            .wrap {            
                 width: 500px;
                 margin: 0 auto;
-                outline: 2px solid lightgray;
+                background: url(earth.png), url(surface.png), url(space.png);
+                background-repeat: no-repeat, no-repeat, no-repeat;
+                background-position: top right, bottom center, 0 0;   
             }            
         </style>
     </head>
