--- a/public/index.html
+++ b/public/index.html
@@ -79,5 +79,6 @@
                 <canvas id=canvas style="width: 500px; height: 500px"></canvas>
             </div>
         </div>        
+        <a href="https://github.com/philmander/save-the-moon"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
     </body>
 </html>
