--- a/public/index.html
+++ b/public/index.html
@@ -2,33 +2,36 @@
 <html>
     <head>
         <title>Save the Moon</title>
+        <meta name="viewport" content="width=device-width">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="theme-color" content="#000"/>
         <link type="shortcut icon" type="image/png" href="./public/moon-icon.png">
         <link href="https://fonts.googleapis.com/css?family=Orbitron:500,700" rel="stylesheet">
         <style>
             html,
             body {
-                height: 100%;
-                width: 100%;
                 margin: 0;
                 padding: 0;
                 background: black;    
                 color: yellow;
+                overflow: hidden;            
             }
 
             .wrap {
-                align-items: center;
-                display: flex;
-                justify-content: center;
-                height: 100%;
-                width: 100%;
+                height: 100vh;
             }
 
             .canvas-wrap {   
-                position: relative;         
-                width: 500px;
+                position: relative;     
+                margin: 0 auto;    
+                width: 100%;
+                max-width: 800px;
+                height: 100%;
+                max-height: 800px;
                 background: url(public/earth.png), url(public/surface.png), url(public/space.png);
                 background-repeat: no-repeat, no-repeat, no-repeat;
-                background-position: top right, bottom center, 0 0;   
+                background-position: top right, bottom center, 0 0; 
+                background-size: 24% auto, 100% auto, 100% 100%;
             }    
             .game-info {
                 position: absolute;
@@ -62,7 +65,7 @@
                     </div>
                     <div id=ready class=card>  
                         <h1>Save the Moon</h1>                  
-                        <p>Press F2 to start</p>                        
+                        <p>Press a key to start</p>                        
                     </div>
                     <div id=finished class="card">             
                         <div class=center>
@@ -70,15 +73,15 @@
                                 <h1>Game Over</h1>
                                 <p>Final Score: <span id=final-score></span></p>
                                 <p>High Score: <span id=high-score></span></p>
-                                <p style="margin-top: 2em">Press F2 to play again</p>     
+                                <p style="margin-top: 2em">Press any key to play again</p>     
                             </div>
                         </div>                   
                     </div>
                 </div>
                 
-                <canvas id=canvas style="width: 500px; height: 500px"></canvas>
+                <canvas id=canvas></canvas>
             </div>
         </div>        
-        <a href="https://github.com/philmander/save-the-moon"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+        <!-- <a href="https://github.com/philmander/save-the-moon"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a> -->
     </body>
 </html>
