--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!-- https://github.com/philmander/save-the-moon-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -62,6 +63,7 @@
                     <div id=running class=card>
                         <p>Score: <span id=score></span></p>
                         <p>Lives: <span id=lives></span></p>
+                        <p>Ammo: <span id=ammo></span></p>
                     </div>
                     <div id=ready class=card>  
                         <h1>Save the Moon</h1>                  
@@ -82,6 +84,5 @@
                 <canvas id=canvas></canvas>
             </div>
         </div>        
-        <!-- <a href="https://github.com/philmander/save-the-moon"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a> -->
     </body>
 </html>
